@@ -26,6 +26,8 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.text.SimpleDateFormat;
+import java.util.Calendar;
+import java.util.Date;
 import java.util.logging.ErrorManager;
 import java.util.logging.FileHandler;
 import java.util.logging.Filter;
@@ -50,80 +52,26 @@ public class SAFRLogger {
     public static final String USER = "USER";
     public static final String SEPARATOR = "================================================================================";
     public static final String NEWLINE = System.getProperty("line.separator");
-    private static transient final Logger userLogger = Logger.getLogger(USER);        
     
     private static ErrorManager errorManager = null;    
     private static FileHandler userHandler = null;
     
-    private enum SetupState {
-        OVERRIDE,
-        BASE,
-        APPLICATION
-    }
-        
     private static void addHandlers(String logPath) throws SAFRException {
     	
     	// add main handler
         final Logger logger = Logger.getLogger("");
-        
         setupConsoleHandler(logger);
-        FileHandler fileHandler = null;
-    	try {
-    		    		
-	        String pattern = logPath + "/Trace.%g.log";
-	        fileHandler = new FileHandler(pattern, 5000000, 40);
-	        fileHandler.setFilter(new Filter() {
-	
-	    		public boolean isLoggable(LogRecord record) {
-	    			String name = record.getLoggerName();
-	    			if (name.equals(USER)) {
-	    				return false;
-	    			}
-	    			else {
-	    				return true;
-	    			}
-	    		}    	
-	        });
-    	
-	    } catch (SecurityException e1) {
-	        throw new SAFRException(e1);
-	    } catch (IOException e2) {
-	        throw new SAFRException(e2);
-	    }        
-        fileHandler.setFormatter(getTraceFormatter());
-        logger.addHandler(fileHandler);    
-
-        if (errorManager != null) {
-            fileHandler.setErrorManager(errorManager);            
-        }
-        
         addUserLogger(logPath);
     }
 
-    public static void addUserLogger() throws SAFRException {
-        addUserLogger(getLogPath());
-    }
-        
     public static void addUserLogger(String logPath) {
         if (userHandler == null) {
             final Logger logger = Logger.getLogger("");
             try {
-                            
-                String pattern = logPath + "/WE.%g.log";
+            	SimpleDateFormat timeFormat = new SimpleDateFormat("yyyy.MM.dd");
+                Date dt = Calendar.getInstance().getTime();                            
+                String pattern = logPath + "/WE." + timeFormat.format(dt) + ".%g.log";
                 userHandler = new FileHandler(pattern, 1000000, 10);
-                userHandler.setFilter(new Filter() {
-        
-                    public boolean isLoggable(LogRecord record) {
-                        String name = record.getLoggerName();
-                        if (name.equals(USER)) {
-                            return true;
-                        }
-                        else {
-                            return false;
-                        }
-                    }       
-                });
-            
             } catch (SecurityException e1) {
                 throw new SAFRException(e1);
             } catch (IOException e2) {
@@ -131,24 +79,10 @@ public class SAFRLogger {
             }
             
             // Create txt Formatter
-            userHandler.setFormatter(new Formatter () {
-                @Override
-                public String format(LogRecord record) {
-                    if (record.getParameters() != null &&
-                        record.getParameters()[0].equals(new Boolean(true))) {
-                        String result =  record.getMessage() + SAFRUtilities.LINEBREAK;
-                        return result;                        
-                    } else {
-                        String tm = new SimpleDateFormat("MM/dd/yyyy HH:mm:ss").format(record.getMillis());
-                        String result =  "[" + tm + "] " + record.getMessage() + SAFRUtilities.LINEBREAK;
-                        if (record.getThrown() != null) {
-                            result += "[" + tm + "] " +  "An unexpected exception has occured, notify IBM with the trace log" +  SAFRUtilities.LINEBREAK;
-                        }
-                        return result;
-                    }
-                }
-                
-            });
+            userHandler.setFormatter(getTraceFormatter());
+            if (errorManager != null) {
+            	userHandler.setErrorManager(errorManager);            
+            }
             logger.addHandler(userHandler);            
         }
     }
@@ -156,20 +90,7 @@ public class SAFRLogger {
     protected static void setupConsoleHandler(final Logger logger) {
         // setup console handler
         if (logger.getHandlers().length > 0) {
-       
             Handler consoleHandler = logger.getHandlers()[0];
-            consoleHandler.setFilter(new Filter() {
-        
-                public boolean isLoggable(LogRecord record) {
-                    String name = record.getLoggerName();
-                    if (name.equals(USER)) {
-                        return false;
-                    }
-                    else {
-                        return true;
-                    }
-                }       
-            });
             consoleHandler.setFormatter(getTraceFormatter());
         }
     }
@@ -178,8 +99,7 @@ public class SAFRLogger {
         return new Formatter () {
             @Override
             public String format(LogRecord record) {
-                if (record.getParameters() != null &&
-                    record.getParameters()[0].equals(new Boolean(true))) {
+                if (record.getParameters() != null && record.getParameters()[0].equals(Boolean.valueOf(true))) {
                     String result =  record.getLevel() + ": " + record.getMessage() + SAFRUtilities.LINEBREAK;
                     return result;                        
                 } else {
@@ -201,87 +121,11 @@ public class SAFRLogger {
      * Setup SAFR Logger
      */
     public static boolean setupLogger() throws SAFRException {
-        
-        SetupState intendedState = null;
         boolean stateChanged = false;
-        String logPath = null;
-
-        // Setup possible log paths
-        String overLogPath = ((OverridePreferences)SAFRPreferences.getSAFRPreferences()).
-            getOverPrefs().get(UserPreferencesNodes.LOG_FILE_PATH, "");
-        String baseLogPath = ((OverridePreferences)SAFRPreferences.getSAFRPreferences()).
-            getBasePrefs().get(UserPreferencesNodes.LOG_FILE_PATH, "");
-        String appLogPath = ProfileLocation.getProfileLocation().getLocalProfile() + "/logs";
-        
-        // Intended state
-        if (overLogPath.length() > 0) {
-            intendedState = SetupState.OVERRIDE;            
-        }
-        else if (baseLogPath.length() > 0) {
-            intendedState  = SetupState.BASE;
-        }
-        else {
-            intendedState = SetupState.APPLICATION;
-        }
-         
-        // Try override log
-        if (checkLog(overLogPath)) {
-        }
-        else {
-            // Try base log
-            if (checkLog(baseLogPath)) {
-                if (intendedState != SetupState.BASE) {
-                    stateChanged = true;
-                    SAFRPreferences.getSAFRPreferences().remove(UserPreferencesNodes.LOG_FILE_PATH);
-                    try {
-                        SAFRPreferences.getSAFRPreferences().flush();
-                    } catch (BackingStoreException e) {
-                        throw new SAFRException(e);
-                    }                        
-                }
-            }
-            // Use application path if possible
-            else {
-                if (checkLog(appLogPath)) {
-                                    
-                    if (intendedState != SetupState.APPLICATION) {
-                        stateChanged = true;
-                        ((OverridePreferences)SAFRPreferences.getSAFRPreferences()).removeAll(UserPreferencesNodes.LOG_FILE_PATH);
-                        try {
-                            SAFRPreferences.getSAFRPreferences().flush();
-                        } catch (BackingStoreException e) {
-                            throw new SAFRException(e);
-                        }                        
-                    }
-                }
-                else {
-                    throw new SAFRException("Invalid log path, cannot make directory "
-                            + appLogPath);                    
-                }
-            }
-        }
-        logPath = getLogPath();    
+        String logPath = getLogPath();    
         addHandlers(logPath);
-        
         return stateChanged;
     }
-    
-    private static boolean checkLog(String logPath) {
-        
-        if (logPath.length() == 0) {
-            return false;            
-        }
-        
-        File logDirs = new File(logPath);        
-        if (!logDirs.exists()) {
-            if (!logDirs.mkdirs()) {
-                return false;
-            }
-        }
-        
-        return true;
-    }
-    
     
     /**
      * Teardown SAFR logger
@@ -294,7 +138,6 @@ public class SAFRLogger {
             logger.removeHandler(handler);        	
         }    	
         userHandler = null;
-        
     }
     
     /**
@@ -309,6 +152,11 @@ public class SAFRLogger {
         else {
             if (!logPath.endsWith("\\") && !logPath.endsWith("/")) {
                 logPath += "\\";
+            }
+            File lp = new File(logPath);
+            if(!lp.exists()) {
+            	//force the logpath to the default
+            	logPath = ProfileLocation.getProfileLocation().getLocalProfile()+"/logs";  
             }
             return logPath;
         }
@@ -334,7 +182,7 @@ public class SAFRLogger {
             }
         }
         
-        File currentLog = new File(getLogPath() + getCurrentLogFileName());
+        File currentLog = new File(getLogPath() + "/" + getCurrentLogFileName());
         
         teardownLogger();
         
@@ -448,22 +296,15 @@ public class SAFRLogger {
         errorManager = em;
     }
 
-    public static Logger getUserLogger() {
-        return userLogger;
-    }
-
     public static void logEnd(Logger devLogger) {
-        userLogger.log(Level.INFO, SAFRUtilities.LINEBREAK);
         devLogger.log(Level.INFO, SAFRUtilities.LINEBREAK);
     }
 
     public static void logAll(Logger devLogger, Level level, String message) {
-        userLogger.log(level, message, true);
         devLogger.log(level, message, true);
     }
     
     public static void logAllStamp(Logger devLogger, Level level, String message, Throwable ex) {
-        userLogger.log(level, message, ex);
         devLogger.log(level, message, ex);
     }
 
